Izrađeno pomoću usluge Colaboratory

--- a/EDA_Training_Testing.ipynb
+++ b/EDA_Training_Testing.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNKNVcpX2BKIr6QgavGvLQe",
+      "authorship_tag": "ABX9TyNaFI4Si0BDzAm61SLnuFZF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1662,19 +1662,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.model_selection import train_test_split\n",
-        "\n",
-        "train_df, val_df = train_test_split(labels_df, test_size=0.2, random_state=42)"
-      ],
-      "metadata": {
-        "id": "DyN3Tqn0j4Z-"
-      },
-      "execution_count": 20,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "train_augment_generator = ImageDataGenerator(\n",
         "    rotation_range=10,\n",
         "    width_shift_range=0.1,\n",
@@ -1725,39 +1712,53 @@
     {
       "cell_type": "code",
       "source": [
-        "val_generator = train_augment_generator.flow_from_dataframe(\n",
-        "    dataframe=val_df,\n",
-        "    directory='/content/images/',\n",
-        "    x_col='img_name',\n",
-        "    y_col='label',\n",
-        "    target_size=(224, 224),\n",
-        "    batch_size=64,\n",
-        "    class_mode='categorical'\n",
-        ")"
+        "def extract_features(images, height, width):\n",
+        "    features = []\n",
+        "    for image in tqdm(images):\n",
+        "        var_img = load_img(image, color_mode='grayscale')\n",
+        "        var_img = var_img.resize((height,width), Image.ANTIALIAS)\n",
+        "        var_img = np.array(var_img)\n",
+        "        var_img = var_img / 255.0\n",
+        "        features.append(var_img)\n",
+        "    features = np.array(features)\n",
+        "    features = features.reshape(len(features), height, width, 1)\n",
+        "    features = np.array(features, dtype=np.float32)\n",
+        "    return features"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3-b5t9Jjo6ZT",
-        "outputId": "4e19c45a-3868-4182-a73d-c93130277909"
+        "id": "d1MGDOVWppjN"
       },
-      "execution_count": 26,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Found 249 validated image filenames belonging to 4 classes.\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "d1MGDOVWppjN"
+        "id": "LGHHFoPTuTAu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from imblearn.over_sampling import SMOTE\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+        "\n",
+        "scaler = StandardScaler()\n",
+        "X_train_scaled = scaler.fit_transform(X_train)\n",
+        "X_test_scaled = scaler.transform(X_test)\n",
+        "\n",
+        "smote = SMOTE(random_state=42)\n",
+        "X_train_resampled, y_train_resampled = smote.fit_resample(X_train_scaled, y_train)"
+      ],
+      "metadata": {
+        "id": "MqxDP0n8t9dV"
       },
       "execution_count": null,
       "outputs": []
