Izrađeno pomoću usluge Colaboratory

--- a/EDA_Training_Testing.ipynb
+++ b/EDA_Training_Testing.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM2ED3XchibyLtUvWiGEsf6",
+      "authorship_tag": "ABX9TyOFtQNtAuKGul5VeEIUpJIS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -360,7 +360,7 @@
             "description_width": ""
           }
         },
-        "7bd9cb8daeeb40f1b37a849f725d0a0f": {
+        "66796cc17d4f44b9a7daca889601a712": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -375,14 +375,14 @@
             "_view_name": "HBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_a6683e00935943e7a75ae7535b496be2",
-              "IPY_MODEL_fe95cffd82294e4a84603c32d64b3ad0",
-              "IPY_MODEL_18e260fa415c4c4c95161d8ec98002bb"
+              "IPY_MODEL_c7e925bb8abf48e8aaa8bbb3d5bbf452",
+              "IPY_MODEL_4d740e71349f414e83ef656940b271c3",
+              "IPY_MODEL_7551d13782124338b8d3d9e1eb70e781"
             ],
-            "layout": "IPY_MODEL_92b2164bc4ce4e93a33a9540c6d1ba16"
+            "layout": "IPY_MODEL_f031ec9b6cb44940b66bb7bfe91aa19c"
           }
         },
-        "a6683e00935943e7a75ae7535b496be2": {
+        "c7e925bb8abf48e8aaa8bbb3d5bbf452": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -397,13 +397,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_7daf361b9339420d88477d0ef9ebf6fb",
+            "layout": "IPY_MODEL_b84a4fc1c4b34d2facf2a2539425e150",
             "placeholder": "​",
-            "style": "IPY_MODEL_286cb8fbf31b4378b3072a95ff11fc63",
+            "style": "IPY_MODEL_57dadd5e822c494e9fbdeadae06adfc9",
             "value": "100%"
           }
         },
-        "fe95cffd82294e4a84603c32d64b3ad0": {
+        "4d740e71349f414e83ef656940b271c3": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
@@ -419,15 +419,15 @@
             "bar_style": "success",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_9f9ee5c933ea445fbcba511813cebefb",
+            "layout": "IPY_MODEL_9f3c198ab1b04f35822534fa330021a5",
             "max": 1244,
             "min": 0,
             "orientation": "horizontal",
-            "style": "IPY_MODEL_ef6cca24c03743ea8adc99b344f9f351",
+            "style": "IPY_MODEL_71546f5600104b7dbe365f64e777727b",
             "value": 1244
           }
         },
-        "18e260fa415c4c4c95161d8ec98002bb": {
+        "7551d13782124338b8d3d9e1eb70e781": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -442,13 +442,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_eb07aa534d3747719201a3292b01d2e2",
+            "layout": "IPY_MODEL_19eb272afd8940dd98664a7273125e01",
             "placeholder": "​",
-            "style": "IPY_MODEL_d2ca23d21897416d9710e7a12e95f1cd",
-            "value": " 1244/1244 [00:01&lt;00:00, 659.89it/s]"
+            "style": "IPY_MODEL_3e63387b75f144be87ce7a3963ab8455",
+            "value": " 1244/1244 [00:02&lt;00:00, 485.88it/s]"
           }
         },
-        "92b2164bc4ce4e93a33a9540c6d1ba16": {
+        "f031ec9b6cb44940b66bb7bfe91aa19c": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -500,7 +500,7 @@
             "width": null
           }
         },
-        "7daf361b9339420d88477d0ef9ebf6fb": {
+        "b84a4fc1c4b34d2facf2a2539425e150": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -552,7 +552,7 @@
             "width": null
           }
         },
-        "286cb8fbf31b4378b3072a95ff11fc63": {
+        "57dadd5e822c494e9fbdeadae06adfc9": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -567,7 +567,7 @@
             "description_width": ""
           }
         },
-        "9f9ee5c933ea445fbcba511813cebefb": {
+        "9f3c198ab1b04f35822534fa330021a5": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -619,7 +619,7 @@
             "width": null
           }
         },
-        "ef6cca24c03743ea8adc99b344f9f351": {
+        "71546f5600104b7dbe365f64e777727b": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
@@ -635,7 +635,7 @@
             "description_width": ""
           }
         },
-        "eb07aa534d3747719201a3292b01d2e2": {
+        "19eb272afd8940dd98664a7273125e01": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -687,7 +687,7 @@
             "width": null
           }
         },
-        "d2ca23d21897416d9710e7a12e95f1cd": {
+        "3e63387b75f144be87ce7a3963ab8455": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -1213,9 +1213,9 @@
           "height": 206
         },
         "id": "cDZEJB8njJvw",
-        "outputId": "26742e0f-4cb9-4ff0-c7cf-df389f2fcc46"
+        "outputId": "aebd415f-70cb-428e-f8bc-b4f685345a54"
       },
-      "execution_count": 43,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1237,7 +1237,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b302c058-e9a1-4468-93bd-eb4d4e2e1b8f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-d330b3eb-7a5b-47bf-80ef-f68f9b779700\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1334,7 +1334,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b302c058-e9a1-4468-93bd-eb4d4e2e1b8f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d330b3eb-7a5b-47bf-80ef-f68f9b779700')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1386,12 +1386,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-b302c058-e9a1-4468-93bd-eb4d4e2e1b8f button.colab-df-convert');\n",
+              "        document.querySelector('#df-d330b3eb-7a5b-47bf-80ef-f68f9b779700 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-b302c058-e9a1-4468-93bd-eb4d4e2e1b8f');\n",
+              "        const element = document.querySelector('#df-d330b3eb-7a5b-47bf-80ef-f68f9b779700');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1411,8 +1411,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-36004261-c41b-44ab-a60e-4b45f797f2b5\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-36004261-c41b-44ab-a60e-4b45f797f2b5')\"\n",
+              "<div id=\"df-4c8137f5-0e90-4b04-8f6a-4d2c027e505b\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4c8137f5-0e90-4b04-8f6a-4d2c027e505b')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1531,7 +1531,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-36004261-c41b-44ab-a60e-4b45f797f2b5 button');\n",
+              "        document.querySelector('#df-4c8137f5-0e90-4b04-8f6a-4d2c027e505b button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1547,7 +1547,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 81
         }
       ]
     },
@@ -1573,36 +1573,77 @@
       "metadata": {
         "id": "1bhUcZWLoHYh"
       },
-      "execution_count": 45,
+      "execution_count": 82,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "features = extract_features_contrast(augmented_images,image_dimensions,image_dimensions)"
+        "X = augmented_images\n",
+        "y = augmented_annotations"
+      ],
+      "metadata": {
+        "id": "XahXeRRAHZTK"
+      },
+      "execution_count": 83,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(y)"
+      ],
+      "metadata": {
+        "id": "lAytAfcsHiin",
+        "outputId": "324cf9b9-abf9-450d-e5fe-84fdccc11746",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[BoundingBox(x1=226.6217, y1=155.4348, x2=257.3387, y2=190.5292, label=0)]\n",
+            " [BoundingBox(x1=45.0503, y1=262.1048, x2=80.9163, y2=304.5598, label=0)]\n",
+            " [BoundingBox(x1=109.3744, y1=229.5764, x2=119.7547, y2=244.5716, label=0)]\n",
+            " ...\n",
+            " [BoundingBox(x1=130.2407, y1=261.6208, x2=154.1649, y2=281.3657, label=0)]\n",
+            " [BoundingBox(x1=171.0253, y1=196.9840, x2=198.9104, y2=220.7519, label=0)]\n",
+            " [BoundingBox(x1=181.1760, y1=155.2563, x2=206.3655, y2=180.3476, label=0)]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "features = extract_features_contrast(X,image_dimensions,image_dimensions)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49,
           "referenced_widgets": [
-            "7bd9cb8daeeb40f1b37a849f725d0a0f",
-            "a6683e00935943e7a75ae7535b496be2",
-            "fe95cffd82294e4a84603c32d64b3ad0",
-            "18e260fa415c4c4c95161d8ec98002bb",
-            "92b2164bc4ce4e93a33a9540c6d1ba16",
-            "7daf361b9339420d88477d0ef9ebf6fb",
-            "286cb8fbf31b4378b3072a95ff11fc63",
-            "9f9ee5c933ea445fbcba511813cebefb",
-            "ef6cca24c03743ea8adc99b344f9f351",
-            "eb07aa534d3747719201a3292b01d2e2",
-            "d2ca23d21897416d9710e7a12e95f1cd"
+            "66796cc17d4f44b9a7daca889601a712",
+            "c7e925bb8abf48e8aaa8bbb3d5bbf452",
+            "4d740e71349f414e83ef656940b271c3",
+            "7551d13782124338b8d3d9e1eb70e781",
+            "f031ec9b6cb44940b66bb7bfe91aa19c",
+            "b84a4fc1c4b34d2facf2a2539425e150",
+            "57dadd5e822c494e9fbdeadae06adfc9",
+            "9f3c198ab1b04f35822534fa330021a5",
+            "71546f5600104b7dbe365f64e777727b",
+            "19eb272afd8940dd98664a7273125e01",
+            "3e63387b75f144be87ce7a3963ab8455"
           ]
         },
         "id": "vxWhWoiC1CGu",
-        "outputId": "4a3f89e9-0bd6-4fc6-db8f-c0e731289525"
+        "outputId": "761a0ab0-a4d2-45d9-f33c-131b26ef476a"
       },
-      "execution_count": 48,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1613,7 +1654,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "7bd9cb8daeeb40f1b37a849f725d0a0f"
+              "model_id": "66796cc17d4f44b9a7daca889601a712"
             }
           },
           "metadata": {}
@@ -1709,11 +1750,11 @@
         "print(proposals)"
       ],
       "metadata": {
-        "id": "SiRqAaF5_N72",
-        "outputId": "212abbf0-20a2-4cfe-918a-e3006b572518",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SiRqAaF5_N72",
+        "outputId": "212abbf0-20a2-4cfe-918a-e3006b572518"
       },
       "execution_count": 80,
       "outputs": [
