Izrađeno pomoću usluge Colaboratory

--- a/EDA_Training_Testing.ipynb
+++ b/EDA_Training_Testing.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPN0iYTMl8MXuWF6fX75QeN",
+      "authorship_tag": "ABX9TyOYPcEWEfGT5oD09EdCegPz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1104,7 +1104,7 @@
       "metadata": {
         "id": "H7DoHa8WEJmq"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -1144,7 +1144,77 @@
       "metadata": {
         "id": "LGHHFoPTuTAu"
       },
-      "execution_count": 49,
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from skimage.morphology import erosion, dilation\n",
+        "from PIL import Image\n",
+        "from skimage import feature\n",
+        "\n",
+        "def extract_features_dilation(images, height, width):\n",
+        "    features = []\n",
+        "    for var_img in tqdm(images):\n",
+        "\n",
+        "        dilated = dilation(var_img)\n",
+        "        dilated = (dilated * 255).astype(np.uint8)\n",
+        "        var_image = Image.fromarray(dilated)\n",
+        "        var_image = var_image.resize((height, width), Image.ANTIALIAS)\n",
+        "        var_image = np.array(var_image) / 255.0\n",
+        "        features.append(var_image)\n",
+        "\n",
+        "    features = np.array(features)\n",
+        "    features = features.reshape(len(features), height, width, 3)\n",
+        "    features = np.array(features, dtype=np.float64)\n",
+        "    return features"
+      ],
+      "metadata": {
+        "id": "j8ABqrGuxT27"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from skimage.morphology import erosion, dilation\n",
+        "from PIL import Image\n",
+        "from skimage import feature\n",
+        "\n",
+        "def extract_features_dilation_with_padding(images, height, width):\n",
+        "    features = []\n",
+        "    for var_img in tqdm(images):\n",
+        "\n",
+        "        padding_needed = False\n",
+        "        if var_img.shape[0] < height or var_img.shape[1] < width:\n",
+        "            padding_needed = True\n",
+        "        if padding_needed:\n",
+        "            pad_height = max(0, height - var_img.shape[0])\n",
+        "            pad_width = max(0, width - var_img.shape[1])\n",
+        "            top_pad = pad_height // 2\n",
+        "            bottom_pad = pad_height - top_pad\n",
+        "            left_pad = pad_width // 2\n",
+        "            right_pad = pad_width - left_pad\n",
+        "            var_img = np.pad(var_img, ((top_pad, bottom_pad), (left_pad, right_pad), (0, 0)), mode='constant')\n",
+        "\n",
+        "        dilated = dilation(var_img)\n",
+        "        dilated = (dilated * 255).astype(np.uint8)\n",
+        "        var_image = Image.fromarray(dilated)\n",
+        "        var_image = var_image.resize((height, width), Image.ANTIALIAS)\n",
+        "        var_image = np.array(var_image) / 255.0\n",
+        "        features.append(var_image)\n",
+        "\n",
+        "    features = np.array(features)\n",
+        "    features = features.reshape(len(features), height, width, 3)\n",
+        "    features = np.array(features, dtype=np.float64)\n",
+        "    return features"
+      ],
+      "metadata": {
+        "id": "9H2B7OtdxgF9"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1174,7 +1244,7 @@
       "metadata": {
         "id": "KTvQoQ6mEN4X"
       },
-      "execution_count": 60,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -1216,7 +1286,7 @@
       "metadata": {
         "id": "g1TdfYMc7zGr"
       },
-      "execution_count": 61,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -1242,7 +1312,7 @@
       "metadata": {
         "id": "SDr6OwjjERyN"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -1280,7 +1350,7 @@
       "metadata": {
         "id": "d1MGDOVWppjN"
       },
-      "execution_count": 48,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -1290,39 +1360,10 @@
         "! pip install kaggle"
       ],
       "metadata": {
-        "id": "vjDmNcTO6U8M",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "5595bb8b-2a8b-4b1f-8639-5fb3556a0879"
+        "id": "vjDmNcTO6U8M"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting pybboxes\n",
-            "  Downloading pybboxes-0.1.6-py3-none-any.whl (24 kB)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from pybboxes) (1.25.2)\n",
-            "Installing collected packages: pybboxes\n",
-            "Successfully installed pybboxes-0.1.6\n",
-            "Requirement already satisfied: kaggle in /usr/local/lib/python3.10/dist-packages (1.5.16)\n",
-            "Requirement already satisfied: six>=1.10 in /usr/local/lib/python3.10/dist-packages (from kaggle) (1.16.0)\n",
-            "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from kaggle) (2024.2.2)\n",
-            "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.10/dist-packages (from kaggle) (2.8.2)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from kaggle) (2.31.0)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from kaggle) (4.66.2)\n",
-            "Requirement already satisfied: python-slugify in /usr/local/lib/python3.10/dist-packages (from kaggle) (8.0.4)\n",
-            "Requirement already satisfied: urllib3 in /usr/local/lib/python3.10/dist-packages (from kaggle) (2.0.7)\n",
-            "Requirement already satisfied: bleach in /usr/local/lib/python3.10/dist-packages (from kaggle) (6.1.0)\n",
-            "Requirement already satisfied: webencodings in /usr/local/lib/python3.10/dist-packages (from bleach->kaggle) (0.5.1)\n",
-            "Requirement already satisfied: text-unidecode>=1.3 in /usr/local/lib/python3.10/dist-packages (from python-slugify->kaggle) (1.3)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests->kaggle) (3.3.2)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests->kaggle) (3.6)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1381,7 +1422,7 @@
         "id": "fgbKHWLghjgp",
         "outputId": "b207e86d-8798-478f-a204-b47751c05f44"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1600,7 +1641,7 @@
         "id": "_zNRlgwYhaej",
         "outputId": "c266c16e-59e0-40c7-e09e-4c2891690415"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1623,7 +1664,7 @@
       "metadata": {
         "id": "dYHHPo77kMFB"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1689,7 +1730,7 @@
         "id": "LWl1vRoEi-sZ",
         "outputId": "e139b2a4-2779-49cf-8507-b7f56baf328b"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1736,7 +1777,7 @@
         "id": "cDZEJB8njJvw",
         "outputId": "be7614c8-0d3a-4db6-e812-7cfc6b2768b5"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2125,139 +2166,8 @@
       "metadata": {
         "id": "2eJ9ikgjne2E"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "first_image = images_array[0]\n",
-        "print(type(first_image))\n",
-        "print(first_image.shape)"
-      ],
-      "metadata": {
-        "id": "iXMeHiBaELXF",
-        "outputId": "f427b604-f296-492d-dd0a-bb2d8e34798c",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<class 'numpy.ndarray'>\n",
-            "(224, 224, 3)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(len(images_array))\n",
-        "print(len(class_label_array))\n",
-        "print(len(bbox_array))"
-      ],
-      "metadata": {
-        "id": "YxuQf07jnmiu",
-        "outputId": "a8ace44d-d184-454f-dd39-e67359c065e0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1244\n",
-            "1244\n",
-            "1244\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "images_array.shape"
-      ],
-      "metadata": {
-        "id": "8RjrjgUWFKdz",
-        "outputId": "ff4a6e70-6c1e-4806-db47-e0b268dc632b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(1244, 224, 224, 3)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 88
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "class_label_array.shape"
-      ],
-      "metadata": {
-        "id": "FjBnh5AaFNMN",
-        "outputId": "1f78ddbf-c241-4a08-a4f8-b4288911cfa7",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(1244, 4)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 89
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "bbox_array.shape"
-      ],
-      "metadata": {
-        "id": "MyCNEvXXFP6f",
-        "outputId": "1a12085d-376a-44ff-8b78-a489b3ec9923",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(1244, 4)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 90
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -2275,7 +2185,7 @@
       "metadata": {
         "id": "vxXN7vZ2rN5u"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2344,7 +2254,7 @@
         },
         "outputId": "e27586ad-ff4a-49cc-ae53-519333692135"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2378,38 +2288,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from tensorflow.keras.applications import EfficientNetB0\n",
-        "from tensorflow.keras.layers import Flatten, Input\n",
-        "\n",
-        "efficientnet = EfficientNetB0(weights=\"imagenet\",\n",
-        "                              include_top=False,\n",
-        "                              input_tensor=Input(shape=(224, 224, 3)))\n",
-        "efficientnet.trainable = False\n",
-        "flatten = efficientnet.output\n",
-        "flatten = Flatten()(flatten)"
-      ],
-      "metadata": {
-        "id": "sjrohyvT0ZkX",
-        "outputId": "475beb7d-61b6-4b4b-b330-be6b2276f0f2",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading data from https://storage.googleapis.com/keras-applications/efficientnetb0_notop.h5\n",
-            "16705208/16705208 [==============================] - 0s 0us/step\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "features = extract_features_erosion(trainImages,height,width)"
       ],
       "metadata": {
@@ -2433,7 +2311,7 @@
         "id": "vxWhWoiC1CGu",
         "outputId": "220ca48b-08d5-4ba1-ca6b-ccd9add61d1f"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2631,7 +2509,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2649,11 +2527,6 @@
         "def crop_images(images, bboxes):\n",
         "    cropped_images = []\n",
         "    for image, bbox in zip(images, bboxes):\n",
-        "        if not isinstance(image, np.ndarray) or len(image.shape) != 3:\n",
-        "            raise ValueError(\"Input images must be 3D arrays\")\n",
-        "\n",
-        "        if len(bbox) != 4:\n",
-        "            raise ValueError(\"Bounding box must have 4 coordinates (xmin, ymin, xmax, ymax)\")\n",
         "\n",
         "        xmin, ymin, xmax, ymax = bbox\n",
         "        xmin = max(0, int(xmin))\n",
@@ -2668,7 +2541,7 @@
       "metadata": {
         "id": "_tmEqc1PAdtr"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2679,57 +2552,8 @@
       "metadata": {
         "id": "WPg35XorAgrL"
       },
-      "execution_count": 24,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "first_image = trainImages[0]\n",
-        "print(type(first_image))\n",
-        "print(first_image.shape)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "kM2mEWP2_Phd",
-        "outputId": "e4030169-d63d-49c3-a3b9-8fcbedb1074a"
-      },
-      "execution_count": 25,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<class 'numpy.ndarray'>\n",
-            "(5, 6, 3)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(len(trainImages))"
-      ],
-      "metadata": {
-        "id": "OG0ARUPcCDzH",
-        "outputId": "53259c67-a13a-448b-8e5d-6c4d569f3ad7",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "995\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2755,7 +2579,7 @@
           "height": 213
         }
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2795,7 +2619,7 @@
           ]
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2837,7 +2661,7 @@
         "id": "e3iG-EpaActh",
         "outputId": "9ecfdbd2-ff25-4fe8-abef-2f2549c352d7"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2867,7 +2691,7 @@
       "metadata": {
         "id": "96c2m0kLAacW"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2885,7 +2709,7 @@
       "metadata": {
         "id": "PUuP1XaS9WqW"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2898,7 +2722,7 @@
       "metadata": {
         "id": "cMG8CFmA9e6R"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2915,7 +2739,7 @@
       "metadata": {
         "id": "9zV1DiTC9kkI"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2930,7 +2754,7 @@
       "metadata": {
         "id": "SVjRN1LV9mAs"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2951,7 +2775,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
